variables.Variables.scala.code
var x=0
while(!estSurBiscuit){
  avance()
  x+=1
}
prendreBiscuit()
var y=0
for(y<-0 to x){
  recule()
}
poseBiscuit()